# research-institute

./: .gitignore  README.md
android/: face_recognize.txt  object_detect.txt
android/AndroidBpmDetect/: settings.gradle
android/AndroidBpmDetect/app/: build.gradle
android/AndroidBpmDetect/bpmdetector/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/AndroidChordino/app/: CMakeLists.txt  build.gradle
android/AndroidChordino/app/src/androidTest/java/com/heaven7/android/chordino/: ExampleInstrumentedTest.java
android/AndroidChordino/app/src/main/: AndroidManifest.xml
android/AndroidChordino/app/src/main/cpp/: Chordino.cpp  Chordino.h  NNLSBase.cpp  NNLSBase.h  NNLSChroma.cpp  NNLSChroma.h  Tuning.cpp  Tuning.h  chordextract.cpp  chordextract.h  chromamethods.cpp  chromamethods.h  cut_gen_strategy.cpp  cut_gen_strategy.h  cut_generator.cpp  cut_generator.h  formats.cpp  formats.h  list.h  mediamanager.cpp  mediamanager.h  native-lib.cpp  number.cpp  number.h  plugins.cpp  sndfile.h  sndmedia.cpp  sndmedia.h
android/AndroidChordino/app/src/main/cpp/android/: logger.cpp  logger.h  native-lib.cpp
android/AndroidChordino/app/src/main/cpp/chordinomedia/: chordinomedia.h
android/AndroidChordino/app/src/main/cpp/depend/: PluginAdapter.h  PluginBase.h  PluginBufferingAdapter.h  PluginWrapper.h  RealTime.h  kiss_fft.h
android/AndroidChordino/app/src/main/cpp/lame/: lame_chordino.h
android/AndroidChordino/app/src/main/cpp/mp3ext/: java_env.cpp  java_env.h  mp3_upperlayyer.cpp  mp3_upperlayyer.h
android/AndroidChordino/app/src/main/java/com/heaven7/android/chordino/: Chordino.java  CommonSoundFile.java  ISoundFile.java  MainActivity.java  MediaParser.java
android/AndroidChordino/app/src/main/res/layout/: activity_main.xml
android/AndroidChordino/app/src/main/res/values/: strings.xml
android/AndroidChordino/app/src/test/java/com/heaven7/android/chordino/: ExampleUnitTest.java
android/AndroidHotFix/: constants.gradle  note.txt
android/AndroidHotFix/app/: build.gradle  dex.keep
android/AndroidUiPerformance/app/: build.gradle
android/AudioMix/app/: build.gradle
android/CoordinatorLayout_Behavior/app/: build.gradle
android/ElfLoader/app/: CMakeLists.txt  build.gradle
android/FFmpeg_android_cmd/app/: CMakeLists.txt  build.gradle
android/GpuImageStudy/: settings.gradle
android/GpuImageStudy/app/: build.gradle
android/GpuImageStudy/gpu_mage/: CMakeLists.txt  build.gradle
android/LameMp3ForAndroid/app/: CMakeLists.txt  build.gradle
android/LameMp3ForAndroid/app/src/main/: AndroidManifest.xml
android/LameMp3ForAndroid/app/src/main/cpp/: array.cpp  array.h  audio_process.cpp  audio_process.h  chordinomedia.h  lame_chordino.cpp  lame_chordino.h  lame_jni.c  lame_jni.h  test.cpp
android/LameMp3ForAndroid/app/src/main/cpp/extra/: float32.c  float32.h
android/LameMp3ForAndroid/app/src/main/cpp/lamemp3/: config.h  lame.h  mpglib_interface.c  util.h
android/LameMp3ForAndroid/app/src/main/java/net/sourceforge/lame/: ByteConvertUtil.java  ChordinoMediaPreTest.java  Lame.java  LameDecodeActivity.java
android/LameMp3ForAndroid/app/src/main/res/layout/: ac_lame_decode.xml
android/MadApp/app/: build.gradle
android/MediaCodecExample/: import-summary.txt
android/MediaCodecExample/app/: build.gradle
android/MediaFormatsCpp/app/: CMakeLists.txt  build.gradle
android/MediaFormatsCpp/app/src/main/: AndroidManifest.xml
android/MediaFormatsCpp/app/src/main/cpp/: chordinomedia.cpp  chordinomedia.h
android/MediaFormatsCpp/app/src/main/java/com/heaven/android/chordinofomats/: MainActivity.java
android/MediaFormatsCpp/app/src/main/res/values/: strings.xml
android/ParseSo/app/: build.gradle
android/RecyclerViewApp/app/: build.gradle
android/SampleNavigation/: build.gradle
android/SampleNavigation/app/: build.gradle
android/TF_ImageLabel/app/: build.gradle  google-services.json
android/TestAccessibilityService/app/: build.gradle
android/TestAndroidLeak/app/: build.gradle
android/VampCompileApp/app/: CMakeLists.txt  build.gradle
android/android-AppShortcuts-demo/: local.properties
android/android-BasicMediaDecoder/: build.gradle  note.txt
android/android-BasicMediaDecoder/Application/: build.gradle
android/android_arch/app/: build.gradle
android/ffmpeg-android-java/: build.gradle
android/ffmpeg-android-java/FFmpegAndroid/: build.gradle
android/ffmpeg-android-java/app/: build.gradle
android/rhino-android-example/: build.gradle  note.txt  settings.gradle
android/vida-research/: build.gradle  constants.gradle
android/waveform-android/: build.gradle  constants.gradle
base-compile/: .gitignore  build.gradle  readme.txt  settings.gradle
cpp/: cpp1.md
cpp/simple1/: CMakeLists.txt  test_fanxing_limit.cpp  xxx.cpp  xxx.h  yyy.cpp
dart/dart-server/: pubspec.yaml
dart/dart-study/: .packages  note.txt  pubspec.yaml
gradle/gradle_cpp_test/: build.gradle  readme.txt  run.bat  test.bat
java/: build.gradle  settings.gradle
java/SoParser/: build.gradle  settings.gradle
java/advance-java/: build.gradle  settings.gradle
java/al4j/: build.gradle  settings.gradle
java/block-chain/: build.gradle  settings.gradle
java/common-montage/: build.gradle  settings.gradle
java/ffmpeg-merge-video/: .gitignore  build.gradle  concat.txt  settings.gradle
java/image-detect/: .gitignore  build.gradle  settings.gradle
java/java-ast/: build.gradle  settings.gradle
java/jdk_parser/: build.gradle  settings.gradle
java/study-antlr/: build.gradle  settings.gradle
java/study-rhino/: build.gradle  settings.gradle
java/test-springboot/: build.gradle  settings.gradle
kotlin/agree-thread/: build.gradle  readme.txt  settings.gradle
kotlin/kotlin_study/: readme.txt
kotlin_study/: readme.txt
kotlin_study/src/: app.kt  param.kt
python/Py_work/: wang_yin.txt
restudy/db_principle/: build.gradle  settings.gradle
script/study-autoit/: build.gradle  settings.gradle
system/: TF_modules_study.txt  base.txt  youtube_8m.txt
system/algorithm/: build.gradle
system/study-datastructure/: build.gradle  settings.gradle
(+1486 files in other folders)
